--- a/card.html
+++ b/card.html
@@ -15,7 +15,7 @@
   <header>
   <div class="upper">
     <div class="logo">
-      <img src="./logo.png" alt="">
+      <img src="./photo/logo.png" alt="">
     </div>
     <div class="nav">
       <a href="#"><strong>ABOUT US</strong></a>
@@ -24,8 +24,8 @@
       
     </div>
     <div class="right">
-      <div class="search"><a href="#"><img src="./search-icon.png" alt=""></a></div>
-      <div class="cart"><a href="#"><img src="./cart-icon.png" alt=""></a></div>
+      <div class="search"><a href="#"><img src="./photo/search-icon.png" alt=""></a></div>
+      <div class="cart"><a href="#"><img src="./photo/cart-icon.png" alt=""></a></div>
       <div class="login"><a href="#"><strong>LOGIN</strong></a></div>
     <div class="sign"><a href="#"><strong>SIGN UP</strong></a></div>
     </div>
@@ -40,9 +40,9 @@
       <h1>My cart</h1>
       <div class="itemcart"></div>
       <div class="shop1">
-        <div class="bin"><img src="./del-icon.png" alt=""></div>
+        <div class="bin"><img src="./photo/del-icon.png" alt=""></div>
         <div class="crop">
-        <div class="docs"><img src="./dOCS.png" alt=""></div>
+        <div class="docs"><img src="./photo/dOCS.png" alt=""></div>
        </div>
         <div class="box">
           <h3>Google Docs</h3>
@@ -66,9 +66,9 @@
       </div>
 
       <div class="shop2">
-        <div class="bin"><img src="./del-icon.png" alt=""></div>
+        <div class="bin"><img src="./photo/del-icon.png" alt=""></div>
         <div class="crop">
-        <div class="docs"><img src="./SLIDES.png" alt=""></div>
+        <div class="docs"><img src="./photo/SLIDES.png" alt=""></div>
        </div>
         <div class="box">
           <h3>Google Slides</h3>
@@ -102,7 +102,7 @@
         <p>THB 300</p>
       </div>
       <div class="apply">
-        <img src="./cupon.png" alt="">
+        <img src="./photo/cupon.png" alt="">
         <input type="text" placeholder="Promotion Code">
         <button> APPLY </button>
       </div>
